# bayesian_game

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
domains/: __init__.py
domains/belief/: __init__.py  belief_domain.py
domains/coordination/: __init__.py  game_coordination.py
domains/environment/: __init__.py  environment_domain.py
tests/: test_architectural_constraints.py  test_belief_domain.py  test_environment_domain.py  test_game_coordination.py  test_ui_interface.py
ui/: gradio_interface.py
